--- a/automatic1111-forge/docker-compose.yml
+++ b/automatic1111-forge/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "7861:7860"
     volumes:
       - ./models:/home/aiuser/stable-diffusion-webui-forge/models
+      - ./venv:/home/aiuser/stable-diffusion-webui-forge/venv
     deploy:
       resources:
         reservations:
