--- a/openewbui-ollama/docker-compose.yml
+++ b/openewbui-ollama/docker-compose.yml
@@ -13,3 +13,8 @@ services:
         reservations:
           devices:
             - capabilities: [gpu]
+volumes:
+  ollama:
+    driver: local
+  open-webui:
+    driver: local
