updated gpu information

--- a/openewbui-ollama/docker-compose.yml
+++ b/openewbui-ollama/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       resources:
         reservations:
           devices:
-            - capabilities: [gpu]
+            - driver: nvidia
+              capabilities: [ gpu ]
 volumes:
   ollama:
     driver: local
