--- a/openewbui-ollama/docker-compose.yml
+++ b/openewbui-ollama/docker-compose.yml
@@ -29,3 +29,12 @@ services:
       - "5002:9099"
     volumes:
       - "./storage/pipelines:/app/pipelines"
+
+  n8n:
+    image: docker.n8n.io/n8nio/n8n
+    container_name: n8n
+    ports:
+      - "5003:5678"
+    volumes:
+      - "./storage/n8n_data:/home/node/.n8n"
+
